--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -14,7 +14,7 @@
     "types": [
       "vite/client",
       "unplugin-vue-router/client",
-      "@proj-airi/unplugin-drizzle-orm-migrations/types",
+      "@proj-airi/unplugin-drizzle-orm-migrations/types"
     ],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
