--- a/packages/drizzle-orm-browser-migrator/package.json
+++ b/packages/drizzle-orm-browser-migrator/package.json
@@ -24,6 +24,11 @@
       "types": "./dist/pglite/index.d.mts",
       "import": "./dist/pglite/index.mjs",
       "node": "./dist/pglite/index.mjs"
+    },
+    "./pg": {
+      "types": "./dist/pg/index.d.mts",
+      "import": "./dist/pg/index.mjs",
+      "node": "./dist/pg/index.mjs"
     }
   },
   "main": "./dist/index.mjs",
@@ -44,7 +49,7 @@
     "attw": "attw --pack . --profile esm-only --ignore-rules cjs-resolves-to-esm"
   },
   "peerDependencies": {
-    "drizzle-orm": ">=0.40.0"
+    "drizzle-orm": ">=0.44.0"
   },
   "dependencies": {
     "@guiiai/logg": "^1.0.10"
