--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,3 +7,6 @@ packages:
 onlyBuiltDependencies:
   - esbuild
   - unrs-resolver
+
+overrides:
+  global: link:../../../Library/pnpm/global/5/node_modules/global
