--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -23,27 +23,27 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.3.3",
+    "@electric-sql/pglite": "^0.3.8",
     "@proj-airi/drizzle-orm-browser-migrator": "workspace:^",
     "@proj-airi/unplugin-drizzle-orm-migrations": "workspace:^",
-    "@vueuse/core": "^13.3.0",
+    "@vueuse/core": "^13.9.0",
     "defu": "^6.1.4",
-    "drizzle-orm": "^0.44.2",
-    "es-toolkit": "^1.39.3",
-    "unplugin-vue-markdown": "^28.3.1",
-    "vue": "^3.5.16"
+    "drizzle-orm": "^0.44.5",
+    "es-toolkit": "^1.39.10",
+    "unplugin-vue-markdown": "^29.1.0",
+    "vue": "^3.5.21"
   },
   "devDependencies": {
-    "@iconify-json/simple-icons": "^1.2.39",
-    "@iconify-json/solar": "^1.2.2",
-    "@shikijs/markdown-it": "^3.6.0",
-    "@unocss/reset": "^66.2.0",
-    "@vitejs/plugin-vue": "^5.2.4",
-    "drizzle-kit": "^0.31.1",
-    "tsx": "^4.20.3",
-    "unplugin-vue-router": "^0.12.0",
-    "vite": "^6.3.5",
+    "@iconify-json/simple-icons": "^1.2.51",
+    "@iconify-json/solar": "^1.2.4",
+    "@shikijs/markdown-it": "^3.12.2",
+    "@unocss/reset": "^66.5.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.5",
+    "unplugin-vue-router": "^0.15.0",
+    "vite": "^7.1.5",
     "vue-router": "^4.5.1",
-    "vue-tsc": "^3.0.0-alpha.10"
+    "vue-tsc": "^3.0.6"
   }
 }
