fix: build & typecheck

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -9,12 +9,14 @@ words:
   - Ayaka
   - bigserial
   - bumpp
+  - changelogithub
   - defu
   - guiiai
   - logg
   - Neko
   - nekw
   - pglite
+  - rspack
   - taze
   - tsdown
   - uncrypto
